--- a/AirMonitor/AirMonitor/AirMonitor.csproj
+++ b/AirMonitor/AirMonitor/AirMonitor.csproj
@@ -22,6 +22,9 @@
     <EmbeddedResource Remove="Views\ResourceDictionaries\colors.xaml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Update="Views\HomePage.xaml.cs">
+      <DependentUpon>HomePage.xaml</DependentUpon>
+    </Compile>
     <Compile Update="Views\Resources\colors.xaml.cs">
       <DependentUpon>colors.xaml</DependentUpon>
     </Compile>
@@ -30,6 +33,9 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
+    <EmbeddedResource Update="Views\HomePage.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
     <EmbeddedResource Update="Views\Resources\colors.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
