--- a/AirMonitor/AirMonitor/AirMonitor.csproj
+++ b/AirMonitor/AirMonitor/AirMonitor.csproj
@@ -11,6 +11,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="sqlite-net-pcl" Version="1.7.335" />
     <PackageReference Include="Xamarin.Forms" Version="4.3.0.908675" />
     <PackageReference Include="Xamarin.Essentials" Version="1.3.1" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
@@ -31,8 +32,10 @@
   </ItemGroup>
   <ItemGroup>
     <None Remove="config.json" />
+    <None Remove="secrets.json" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="config.json" />
+    <EmbeddedResource Include="secrets.json" />
   </ItemGroup>
 </Project>
