--- a/AirMonitor/AirMonitor/config.json
+++ b/AirMonitor/AirMonitor/config.json
@@ -1,6 +1,5 @@
 ﻿{
   "AirlyApiUrl": "https://airapi.airly.eu/v2/",
   "AirlyApiMeasurementUrl": "measurements/installation",
-  "AirlyApiInstallationUrl": "installations/nearest",
-  "AirlyApiKey": ""
+  "AirlyApiInstallationUrl": "installations/nearest"
 }
