--- a/AirMonitor/AirMonitor/AirMonitor.csproj
+++ b/AirMonitor/AirMonitor/AirMonitor.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
@@ -11,14 +11,16 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="sqlite-net-pcl" Version="1.7.335" />
+    <PackageReference Include="Xamarin.Forms" Version="4.6.0.847" />
+    <PackageReference Include="Xamarin.Essentials" Version="1.5.3.2" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
-    <PackageReference Include="Xamarin.Forms" Version="4.3.0.908675" />
-    <PackageReference Include="Xamarin.Essentials" Version="1.3.1" />
+    <PackageReference Include="Xamarin.Forms.Maps" Version="4.6.0.847" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="Views\" />
     <Folder Include="Views\Controls\" />
     <Folder Include="Styles\" />
+    <Folder Include="ViewModels\" />
     <Folder Include="Converters\" />
   </ItemGroup>
   <ItemGroup>
@@ -28,11 +30,21 @@
     <Compile Remove="Converters\StringFormatConverter.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Remove="conf\config.json" />
-    <None Remove="conf\secret.json" />
+    <None Remove="config.json" />
+    <None Remove="secrets.json" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="conf\config.json" />
-    <EmbeddedResource Include="conf\secret.json" />
+    <EmbeddedResource Include="config.json" />
+    <EmbeddedResource Include="secrets.json" />
+  </ItemGroup>
+  <ItemGroup>
+    <Compile Update="Views\MapPage.xaml.cs">
+      <DependentUpon>MapPage.xaml</DependentUpon>
+    </Compile>
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Update="Views\MapPage.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
   </ItemGroup>
 </Project>
